--- a/style.css
+++ b/style.css
@@ -21,10 +21,8 @@ body{
     color: rgba(255, 255, 255, 0.75);
     font-size:24pt;}
 
-    img {
-    margin-top:50px;
-    margin-left: 600px;
-    margin-bottom: -250px;
+ img {
+    margin:1.5% 25%;
     width: 750px;
     height: 500px;}
     
@@ -42,7 +40,7 @@ body{
     }
 
     ul {
-      
+      font-family:"Century Gothic";
       list-style-type: none;
       margin: 0;
       padding: 0;
